--- a/config/index.html
+++ b/config/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Digital Signage Example Configuration</title>
-  <link rel="stylesheet" type="text/css" href="../bower_components/ds-client/css/ds-base.css">
+  <link rel="stylesheet" type="text/css" href="../bower_components/ds-client/dist/ds-base.css">
   <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
     </form>
     <button id="delete" style="display: none;">Delete</button>
   </div>
-  <script src="../bower_components/ds-client/js/ds-base.js"></script>
+  <script src="../bower_components/ds-client/dist/ds-base.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
