--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Digital Signage Example</title>
   <link rel="stylesheet" type="text/css" href="bower_components/thr0w-client/dist/thr0w-base.css">
   <link rel="stylesheet" type="text/css" href="bower_components/thr0w-pdf/dist/thr0w-pdf.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/ds-client/dist/ds-base.css">
   <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
@@ -15,14 +16,17 @@
       <div id="my_content__carousel"></div>
     </div>
   </div>
+  <!-- DEV -->
   <script src="http://localhost:3001/socket.io/socket.io.js"></script>
-  <!--
+  <!-- -->
+  <!-- PROD
   <script src="http://192.168.1.2:3001/socket.io/socket.io.js"></script>
   -->
   <script src="lib/pdfjs/build/pdf.js"></script>
   <script src="lib/pdfjs/build/pdf.worker.js"></script>
   <script src="bower_components/thr0w-client/js/thr0w-base.js"></script>
   <script src="bower_components/thr0w-pdf/dist/thr0w-pdf.min.js"></script>
+  <script src="bower_components/ds-client/dist/ds-base.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
