--- a/config/index.html
+++ b/config/index.html
@@ -53,6 +53,7 @@
               <h3 class="panel-title">Portable Document Format (PDF) File</h3>
             </div>
             <div class="panel-body">
+              <div id ="authorized__pdf-filename" class="alert alert-danger" role="alert" style="display: none;">File must be a PDF file.</div>
               <div id ="authorized__pdf-failed" class="alert alert-danger" role="alert" style="display: none;">Submit failed.</div>
               <div id="authorized__pdf-browse" class="form-group">
                 <label class="btn btn-default btn-file">
