--- a/control/index.html
+++ b/control/index.html
@@ -18,29 +18,15 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12">
-        <div id="login" style="display: none;" class="panel panel-default">
-          <div class="panel-heading">Login</div>
-          <div class="panel-body">
-            <form id="login__form">
-              <div class="form-group">
-                <input id="login__form__username" type="text" class="form-control" placeholder="username" />
-              </div>
-              <div class="form-group">
-                <input id="login__form__password" type="password" class="form-control" placeholder="password" />
-              </div>
-              <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-          </div>
-        </div>
-        <div id="control" style="display: none;">
-          <button id="control__logout" class="btn btn-default">Logout</button>
+        <div id="authorized" style="display: none;">
+          <button id="authorized__logout" class="btn btn-default">Logout</button>
         </div>
       </div>
     </div>
   </div>
-  <div id="control-float" style="display: none;">
-    <div id="control-float__button--prev" class="control-float__button"></div>
-    <div id="control-float__button--next" class="control-float__button"></div>
+  <div id="authorized-float" style="display: none;">
+    <div id="authorized-float__button--prev" class="authorized-float__button"></div>
+    <div id="authorized-float__button--next" class="authorized-float__button"></div>
   </div>
   <script src="../bower_components/thr0w-client/dist/thr0w-base.min.js"></script>
   <script src="app.js"></script>
