--- a/config/index.html
+++ b/config/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Digital Signage Example Configuration</title>
   <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="../bower_components/thr0w-client/dist/thr0w-base.css">
   <link rel="stylesheet" type="text/css" href="../bower_components/ds-client/dist/ds-base.css">
   <link rel="stylesheet" type="text/css" href="app.css">
 </head>
@@ -70,6 +71,7 @@
       </div>
     </div>
   </div>
+  <script src="../bower_components/thr0w-client/dist/thr0w-base.min.js"></script>
   <script src="../bower_components/ds-client/dist/ds-base.min.js"></script>
   <script src="app.js"></script>
 </body>
