--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <!-- -->
   <script src="lib/pdfjs/build/pdf.js"></script>
   <script src="lib/pdfjs/build/pdf.worker.js"></script>
+  <script src="bower_components/leapjs/leap-0.6.4.min.js"></script>
   <script src="bower_components/thr0w-client/js/thr0w-base.js"></script>
   <script src="bower_components/thr0w-pdf/dist/thr0w-pdf.min.js"></script>
   <script src="bower_components/ds-client/dist/ds-base.min.js"></script>
