got rid of prod and dev setups

--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
       <div id="my_content__carousel"></div>
     </div>
   </div>
-  <!-- DEV
-  <script src="http://localhost:3001/socket.io/socket.io.js"></script>
-  -->
-  <!-- PROD -->
-  <script src="http://192.168.1.2:3001/socket.io/socket.io.js"></script>
-  <!-- -->
+  <script src="lib/socket.io/socket.io.js"></script>
   <script src="lib/pdfjs/build/pdf.js"></script>
   <script src="lib/pdfjs/build/pdf.worker.js"></script>
   <script src="bower_components/leapjs/leap-0.6.4.min.js"></script>
